Fixed logo's color in dark mode

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -119,12 +119,18 @@ blockquote {
     line-height: 0;
     margin-right: 0 !important;
     transition: all 0.2s ease-out;
+    @media (prefers-color-scheme: dark) {
+        filter: invert(1);
+    }
     &:hover {
         cursor: pointer;
-        filter: sepia(1) brightness(90%) hue-rotate(150deg) ;
+        filter: sepia(1) brightness(90%) hue-rotate(160deg) saturate(2);
+        @media (prefers-color-scheme: dark) {
+            filter: invert(1) sepia(1) brightness(90%) hue-rotate(160deg) saturate(4);
+        }
     }
     .logo-img {
-        width: 3.5em;
+        height: 40px;
     }
 }
 
